--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,14 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "types": ["vite/client"],
+
+    "baseUrl": ".",                 // <— ТУТ
+    "paths": {                      // <— ТУТ
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src"]
 }
