--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://poliukhovych.github.io/cubic-frontend",
+  "homepage": "https://VolodymyrDem.github.io/cubic-frontend",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
