--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -4,12 +4,26 @@ server {
 
   root /usr/share/nginx/html;
 
-  # редірект з кореня на /cubic-frontend/
-  location = / {
-    return 302 /cubic-frontend/;
+  # Do not cache the app shell and runtime config
+  location = /index.html {
+    add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+    try_files $uri /index.html;
   }
 
-  location /cubic-frontend/ {
-    try_files $uri $uri/ /cubic-frontend/index.html;
+  location = /config.js {
+    add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+    try_files $uri /config.js;
+  }
+
+  # Cache static assets aggressively (hashed filenames)
+  location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|eot)$ {
+    add_header Cache-Control "public, max-age=31536000, immutable" always;
+    try_files $uri =404;
+  }
+
+  # SPA fallback
+  location / {
+    add_header Cache-Control "no-cache" always;
+    try_files $uri $uri/ /index.html;
   }
 }
