--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -15,6 +15,15 @@ server {
     try_files $uri /config.js;
   }
 
+  # Proxy API requests to backend
+  location /api/ {
+    proxy_pass http://cubic-backend:8000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
   # Cache static assets aggressively (hashed filenames)
   location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico|woff2?|ttf|eot)$ {
     add_header Cache-Control "public, max-age=31536000, immutable" always;
